Add update group chat, remove memeber, update role, ...