@@ -2,9 +2,10 @@ package com.kt.social.domain.message.service.impl;
 
 import com.kt.social.auth.repository.UserCredentialRepository;
 import com.kt.social.auth.util.SecurityUtils;
+import com.kt.social.common.exception.AccessDeniedException;
+import com.kt.social.common.exception.BadRequestException;
 import com.kt.social.common.exception.ResourceNotFoundException;
-import com.kt.social.domain.message.dto.ConversationCreateRequest;
-import com.kt.social.domain.message.dto.ConversationResponse;
+import com.kt.social.domain.message.dto.*;
 import com.kt.social.domain.message.enums.ConversationRole;
 import com.kt.social.domain.message.model.Conversation;
 import com.kt.social.domain.message.model.ConversationMember;
@@ -14,6 +15,7 @@ import com.kt.social.domain.message.repository.ConversationRepository;
 import com.kt.social.domain.message.service.ConversationService;
 import com.kt.social.domain.user.model.User;
 import com.kt.social.domain.user.repository.UserRepository;
+import com.kt.social.infra.storage.StorageService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -32,23 +34,29 @@ public class ConversationServiceImpl implements ConversationService {
     private final UserRepository userRepository;
     private final UserCredentialRepository credRepo;
     private final ConversationMemberRepository conversationMemberRepository;
+    private final StorageService storageService;
 
     @Override
     @Transactional
     public ConversationResponse createConversation(ConversationCreateRequest req) {
         User creator = SecurityUtils.getCurrentUser(credRepo, userRepository);
 
+        String mediaUrl = null;
+        if (req.getMedia() != null && !req.getMedia().isEmpty()) {
+            mediaUrl = storageService.saveFile(req.getMedia(), "conversations/" + UUID.randomUUID());
+        }
+
         Conversation convo = Conversation.builder()
                 .isGroup(Boolean.TRUE.equals(req.getIsGroup()))
                 .title(req.getTitle())
-                .mediaUrl(req.getMediaUrl())
+                .mediaUrl(mediaUrl)
                 .messages(new ArrayList<>())
                 .createdAt(Instant.now())
                 .build();
 
         Conversation saved = conversationRepository.save(convo);
 
-        // 🔹 Người tạo là OWNER
+        // Người tạo là OWNER
         ConversationMember owner = ConversationMember.builder()
                 .id(new ConversationMemberId(saved.getId(), creator.getId()))
                 .conversation(saved)
@@ -58,7 +66,7 @@ public class ConversationServiceImpl implements ConversationService {
                 .build();
         memberRepository.save(owner);
 
-        // 🔹 Các thành viên khác là MEMBER
+        // Các thành viên khác là MEMBER
         if (req.getMemberIds() != null) {
             for (Long userId : req.getMemberIds()) {
                 if (!userId.equals(creator.getId())) {
@@ -93,46 +101,195 @@ public class ConversationServiceImpl implements ConversationService {
     }
 
     @Override
+    @Transactional
+    public ConversationSummaryResponse updateConversation(Long currentUserId, UpdateConversationRequest request) {
+        ConversationMember member = conversationMemberRepository.findByConversationIdAndUserId(request.getConversationId(), currentUserId)
+                .orElseThrow(() -> new AccessDeniedException("Bạn không phải là thành viên của cuộc hội thoại này."));
+
+        Conversation conversation = member.getConversation();
+
+        // Kiểm tra nghiệp vụ: Đây có phải là nhóm không?
+        if (conversation.getIsGroup() == null || !conversation.getIsGroup()) {
+            throw new BadRequestException("Chỉ có thể cập nhật thông tin cho chat nhóm.");
+        }
+
+        // Kiểm tra quyền: Bạn có phải là OWNER không?
+//        if (member.getRole() != ConversationRole.OWNER) {
+//            throw new AccessDeniedException("Chỉ chủ nhóm mới có quyền cập nhật thông tin.");
+//        }
+
+        if (request.getTitle() != null && !request.getTitle().isBlank()) {
+            conversation.setTitle(request.getTitle());
+        }
+
+        if (request.getMediaFile() != null && !request.getMediaFile().isEmpty()) {
+            // Xóa media cũ (nếu có)
+            if (conversation.getMediaUrl() != null && !conversation.getMediaUrl().isBlank()) {
+                storageService.deleteFile(conversation.getMediaUrl());
+            }
+
+            String newMediaUrl = storageService.saveFile(request.getMediaFile(), "conversations/" + conversation.getId());
+            conversation.setMediaUrl(newMediaUrl);
+        }
+
+        conversation.setUpdatedAt(Instant.now());
+        Conversation savedConversation = conversationRepository.save(conversation);
+
+        return toConversationSummaryDto(savedConversation, currentUserId);
+    }
+
+    @Override
+    @Transactional
+    public ConversationSummaryResponse addMembersToGroup(Long currentUserId, AddMembersRequest request) {
+
+        ConversationMember currentUserMember = conversationMemberRepository.findByConversationIdAndUserId(request.getConversationId(), currentUserId)
+                .orElseThrow(() -> new AccessDeniedException("Bạn không phải là thành viên của cuộc hội thoại này."));
+
+        Conversation conversation = currentUserMember.getConversation();
+
+        if (conversation.getIsGroup() == null || !conversation.getIsGroup()) {
+            throw new BadRequestException("Chỉ có thể thêm thành viên vào chat nhóm.");
+        }
+
+        // Kiểm tra quyền: Bạn có phải là OWNER/ADMIN không?
+//        if (currentUserMember.getRole() == ConversationRole.MEMBER) {
+//            throw new AccessDeniedException("Chỉ chủ nhóm (hoặc phó nhóm) mới có quyền thêm thành viên.");
+//        }
+
+        // Lấy danh sách ID các thành viên HIỆN TẠI (để lọc trùng)
+        Set<Long> existingMemberIds = conversation.getMembers().stream()
+                .map(cm -> cm.getUser().getId())
+                .collect(Collectors.toSet());
+
+        // Lọc ra các ID thực sự MỚI
+        List<Long> newMemberIds = request.getUserIds().stream()
+                .filter(id -> !existingMemberIds.contains(id))
+                .distinct()
+                .toList();
+
+        if (newMemberIds.isEmpty()) {
+            return toConversationSummaryDto(conversation, currentUserId);
+        }
+
+        List<User> newUsers = userRepository.findByIdIn(newMemberIds);
+        if (newUsers.size() != newMemberIds.size()) {
+            throw new ResourceNotFoundException("Một số user ID không hợp lệ.");
+        }
+
+        List<ConversationMember> newMembers = newUsers.stream()
+                .map(user -> ConversationMember.builder()
+                        .id(new ConversationMemberId(request.getConversationId(), user.getId()))
+                        .conversation(conversation)
+                        .user(user)
+                        .role(ConversationRole.MEMBER)
+                        .joinedAt(Instant.now())
+                        .build())
+                .toList();
+
+        conversationMemberRepository.saveAll(newMembers);
+
+        conversation.setUpdatedAt(Instant.now());
+        conversationRepository.save(conversation);
+
+        Conversation updatedConvo = conversationRepository.findById(request.getConversationId()).get();
+        return toConversationSummaryDto(updatedConvo, currentUserId);
+    }
+
+    @Override
+    @Transactional
+    public ConversationSummaryResponse removeMemberFromGroup(Long currentUserId, Long conversationId, Long userIdToRemove) {
+        // 1. Lấy member thực hiện (và kiểm tra nhóm)
+        ConversationMember currentUserMember = checkGroupAndGetMember(conversationId, currentUserId);
+
+        // 2. Lấy member bị xóa
+        ConversationMember targetMember = conversationMemberRepository.findByConversationIdAndUserId(conversationId, userIdToRemove)
+                .orElseThrow(() -> new ResourceNotFoundException("Thành viên này không tồn tại trong nhóm."));
+
+        // 3. Kiểm tra logic: không thể tự xóa mình
+        if (currentUserId.equals(userIdToRemove)) {
+            throw new BadRequestException("Bạn không thể tự xóa mình. Hãy dùng chức năng 'Rời nhóm'.");
+        }
+
+        // 4. Kiểm tra quyền
+        ConversationRole currentUserRole = currentUserMember.getRole();
+        ConversationRole targetUserRole = targetMember.getRole();
+
+        // Chỉ OWNER hoặc ADMIN mới có quyền xóa
+        if (currentUserRole == ConversationRole.MEMBER) {
+            throw new AccessDeniedException("Chỉ chủ nhóm hoặc phó nhóm mới có quyền xóa thành viên.");
+        }
+
+        // Không ai được xóa OWNER
+        if (targetUserRole == ConversationRole.OWNER) {
+            throw new AccessDeniedException("Không thể xóa chủ nhóm.");
+        }
+
+        // ADMIN không thể xóa ADMIN khác
+        if (currentUserRole == ConversationRole.ADMIN && targetUserRole == ConversationRole.ADMIN) {
+            throw new AccessDeniedException("Phó nhóm không thể xóa phó nhóm khác.");
+        }
+
+        // 5. Xóa
+        conversationMemberRepository.delete(targetMember);
+
+        // 6. Cập nhật thời gian và trả về
+        Conversation conversation = currentUserMember.getConversation();
+        conversation.setUpdatedAt(Instant.now());
+        conversationRepository.save(conversation);
+
+        // Query lại để lấy danh sách member chính xác
+        Conversation updatedConvo = conversationRepository.findById(conversationId).get();
+        return toConversationSummaryDto(updatedConvo, currentUserId);
+    }
+
+    @Override
+    @Transactional
+    public ConversationSummaryResponse updateMemberRole(Long currentUserId, UpdateMemberRoleRequest request) {
+        // Lấy member thực hiện (và kiểm tra nhóm)
+        ConversationMember currentUserMember = checkGroupAndGetMember(request.getConversationId(), currentUserId);
+
+        // Lấy member bị thay đổi
+        ConversationMember targetMember = conversationMemberRepository.findByConversationIdAndUserId(request.getConversationId(), request.getUserIdToChange())
+                .orElseThrow(() -> new ResourceNotFoundException("Thành viên này không tồn tại trong nhóm."));
+
+        // Validate vai trò mới (Không được phép gán OWNER)
+        if (request.getNewRole() == null || request.getNewRole() == ConversationRole.OWNER) {
+            throw new BadRequestException("Vai trò không hợp lệ. Chỉ có thể gán 'ADMIN' hoặc 'MEMBER'.");
+        }
+
+        // Kiểm tra quyền: Chỉ OWNER/ADMIN mới được làm
+        if (currentUserMember.getRole() == ConversationRole.MEMBER) {
+            throw new AccessDeniedException("Chỉ chủ/phó nhóm mới có quyền thay đổi vai trò thành viên.");
+        }
+
+        if (targetMember.getRole() == ConversationRole.OWNER) {
+            throw new BadRequestException("Không thể thay đổi vai trò của chủ nhóm.");
+        }
+
+        targetMember.setRole(request.getNewRole());
+        conversationMemberRepository.save(targetMember);
+
+        Conversation conversation = currentUserMember.getConversation();
+        conversation.setUpdatedAt(Instant.now());
+        conversationRepository.save(conversation);
+
+        Conversation updatedConvo = conversationRepository.findById(request.getConversationId()).get();
+        return toConversationSummaryDto(updatedConvo, currentUserId);
+    }
+
+    @Override
     @Transactional(readOnly = true)
-    public List<Map<String, Object>> getUserConversations(Long userId) {
-        List<ConversationMember> joined = conversationMemberRepository.findByUserId(userId);
+    public List<ConversationSummaryResponse> getUserConversations(Long userId) {
+
+        List<ConversationMember> joined = conversationMemberRepository.findConversationsByUserId(userId);
+
+        Set<Long> processedConversationIds = new HashSet<>();
 
         return joined.stream()
-                .map(cm -> {
-                    Conversation c = cm.getConversation();
-
-                    if (c == null) {
-                        return null;
-                    }
-
-                    Map<String,Object> lastMessage = (c.getMessages() != null && !c.getMessages().isEmpty())
-                            ? c.getMessages().getFirst()
-                            : null;
-
-                    List<Long> memberIds;
-                    if (c.getMembers() == null) {
-                        memberIds = List.of();
-                    } else {
-                        memberIds = c.getMembers().stream()
-                                .map(ConversationMember::getUser)
-                                .filter(Objects::nonNull)
-                                .map(User::getId)
-                                .toList();
-                    }
-
-                    Map<String, Object> map = new HashMap<>();
-                    map.put("conversationId", c.getId());
-                    map.put("title", c.getTitle());
-                    map.put("isGroup", c.getIsGroup());
-                    map.put("lastMessage", lastMessage);
-                    map.put("memberIds", memberIds);
-                    map.put("createdAt", c.getCreatedAt());
-
-                    return map;
-                    // 🔥 KẾT THÚC SỬA
-                })
-                .filter(Objects::nonNull)
-                .toList();
+                .map(ConversationMember::getConversation)
+                .filter(c -> c != null && processedConversationIds.add(c.getId()))
+                .map(c -> toConversationSummaryDto(c, userId))
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -173,13 +330,12 @@ public class ConversationServiceImpl implements ConversationService {
 
         Conversation saved = conversationRepository.save(convo);
 
-        // Thêm 2 member với role OWNER / MEMBER (chọn 1 convention)
         ConversationMember cmA = ConversationMember.builder()
                 .id(new ConversationMemberId(saved.getId(), a.getId()))
                 .conversation(saved)
                 .user(a)
                 .joinedAt(Instant.now())
-                .role(ConversationRole.MEMBER) // hoặc MEMBER, tùy quy ước
+                .role(ConversationRole.MEMBER)
                 .build();
 
         ConversationMember cmB = ConversationMember.builder()
@@ -202,5 +358,67 @@ public class ConversationServiceImpl implements ConversationService {
                 .createdAt(saved.getCreatedAt())
                 .memberIds(memberIds)
                 .build();
+    }
+
+    // -------------------------HELPER METHODS-------------------------
+    private ConversationSummaryResponse toConversationSummaryDto(Conversation c, Long viewerId) {
+        Map<String, Object> lastMessage = (c.getMessages() != null && !c.getMessages().isEmpty())
+                ? c.getMessages().getFirst()
+                : null;
+
+        List<ParticipantDto> participants = c.getMembers().stream()
+                .map(ConversationMember::getUser)
+                .filter(Objects::nonNull)
+                .map(u -> ParticipantDto.builder()
+                        .id(u.getId())
+                        .displayName(u.getDisplayName())
+                        .avatarUrl(u.getAvatarUrl())
+                        .build())
+                .toList();
+
+        String finalTitle = c.getTitle();
+        String finalMediaUrl = c.getMediaUrl();
+
+        if (c.getIsGroup() == null || !c.getIsGroup()) {
+            // Chat 1-1
+            ParticipantDto otherUser = participants.stream()
+                    .filter(p -> !p.getId().equals(viewerId))
+                    .findFirst()
+                    .orElse(null);
+
+            if (otherUser != null) {
+                finalTitle = otherUser.getDisplayName();
+                finalMediaUrl = otherUser.getAvatarUrl();
+            } else if (finalTitle == null) {
+                finalTitle = "Cuộc trò chuyện";
+            }
+        }
+
+        return ConversationSummaryResponse.builder()
+                .id(c.getId())
+                .title(finalTitle)
+                .mediaUrl(finalMediaUrl)
+                .isGroup(c.getIsGroup() != null && c.getIsGroup())
+                .lastMessage(lastMessage)
+                .participants(participants)
+                .updatedAt(c.getUpdatedAt() != null ? c.getUpdatedAt() : c.getCreatedAt())
+                .build();
+    }
+
+    private ConversationMember checkGroupAndGetMember(Long conversationId, Long userId) {
+        ConversationMember member = conversationMemberRepository.findByConversationIdAndUserId(conversationId, userId)
+                .orElseThrow(() -> new AccessDeniedException("Bạn không phải là thành viên của cuộc hội thoại này."));
+
+        Conversation convo = member.getConversation();
+        if (convo == null) { // Đảm bảo convo được load
+            convo = conversationRepository.findById(conversationId)
+                    .orElseThrow(() -> new ResourceNotFoundException("Conversation not found"));
+            member.setConversation(convo);
+        }
+
+        if (convo.getIsGroup() == null || !convo.getIsGroup()) {
+            throw new BadRequestException("Hành động này chỉ áp dụng cho chat nhóm.");
+        }
+        return member;
     }
 }
